struttura html + css flex grow/shrink

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto:wght@100;300;400;500;900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- ENLARGE: <i class="fa-solid fa-maximize"></i> -->
@@ -33,38 +39,103 @@
     <!-- SMALL ARROW DOWN <i class="fa-solid fa-angle-down"></i> -->
     <!-- WORLD <i class="fa-solid fa-earth-americas"></i> -->
     <!-- DROPBOX LOGO <i class="fa-brands fa-dropbox"></i> -->
-    <title>Document</title>
+
+
+
+    <!-- HOME <i class="fa-solid fa-house"></i> -->
+    <!-- SEARCH <i class="fa-solid fa-magnifying-glass"></i> -->
+    <!-- LIBRARY <i class="fa-solid fa-lines-leaning"></i> -->
+
+    <!-- PLUS <i class="fa-solid fa-plus"></i> -->
+
+    <!-- ARROW DOWN <i class="fa-solid fa-arrow-down"></i> -->
+    <!-- USER <i class="fa-solid fa-user"></i> -->
+
+    <!-- SPOTIFY <i class="fa-brands fa-spotify"></i> -->
+    <!-- HEART <i class="fa-regular fa-heart"></i> -->
+    <!-- FOLDER <i class="fa-regular fa-folder"></i> -->
+    <!-- SHUFFLE <i class="fa-solid fa-shuffle"></i> -->
+    <!-- PRE SONG <i class="fa-solid fa-backward-step"></i> -->
+    <!-- NEXT SONG <i class="fa-solid fa-forward-step"></i> -->
+    <!-- PLAY <i class="fa-solid fa-circle-play"></i> -->
+    <!-- PAUSE <i class="fa-solid fa-circle-pause"></i> -->
+    <!-- ARROW CIRCLE <i class="fa-solid fa-arrow-rotate-right"></i> -->
+    <!-- LIST-UL <i class="fa-solid fa-list-ul"></i> -->
+    <!-- SCREEN <i class="fa-solid fa-display"></i> -->
+    <!-- VOLUME-LOW <i class="fa-solid fa-volume-low"></i> -->
+
+    <title>Spotify</title>
 </head>
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
+<body class="border-blue">
+
+
+    <main class="main-container border-yellow">
+
+        <aside class="aside-nav border-red">
+
+        </aside>
+
+        <section class="main-section border-green">
+
+            <nav class="upgrade border-gray">
+                <button><a href="#">EFFETTUA L'UPGRADE</a></button>
+            </nav>
+
+            <div class="main-col border-blue-2">
+                <div class="filters border-violet">
+                    <ul>
+                        <li>IN EVIDENZA</li>
+                        <li>PODCAST</li>
+                        <li>CLASSIFICHE</li>
+                        <li>GENERI E MOOD</li>
+                        <li>NUOVE USCITE</li>
+                        <li>SCOPRI</li>
+                    </ul>
+                </div>
+
+                <div class="row-1 border-black">
+                    <h2></h2>
+                    <div class="col">
+                        <div class="card">
+                            <h3>Heavy Metal</h3>
+                            <h4>Subtitle</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row-2 border-black">
+                    <h2></h2>
+                    <div class="col">
+                        <div class="card">
+                            <h3>Heavy Metal</h3>
+                            <h4>Subtitle</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row-3 border-black">
+                    <h2></h2>
+                    <div class="col">
+                        <div class="card">
+                            <h3>Heavy Metal</h3>
+                            <h4>Subtitle</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
-        <section>
-        </section>
-        <section>
-        </section>
+
     </main>
-    <footer>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+
+
+    <footer class="player-section border-pink">
+
+        <div class="player">1</div>
+        <div class="player">2</div>
+        <div class="player">3</div>
+
     </footer>
+
 </body>
 
 </html>
