bg color + posizione card e col in main

--- a/index.html
+++ b/index.html
@@ -94,30 +94,38 @@
                     </ul>
                 </div>
 
-                <div class="row-1 border-black">
-                    <h2></h2>
+                <div class="row row-1 border-black">
+                    <h2 class="color-white">Recently played</h2>
                     <div class="col">
                         <div class="card">
-                            <h3>Heavy Metal</h3>
-                            <h4>Subtitle</h4>
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
                         </div>
-                    </div>
-                </div>
-                <div class="row-2 border-black">
-                    <h2></h2>
-                    <div class="col">
                         <div class="card">
-                            <h3>Heavy Metal</h3>
-                            <h4>Subtitle</h4>
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
                         </div>
-                    </div>
-                </div>
-                <div class="row-3 border-black">
-                    <h2></h2>
-                    <div class="col">
                         <div class="card">
-                            <h3>Heavy Metal</h3>
-                            <h4>Subtitle</h4>
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
                         </div>
                     </div>
                 </div>
