--- a/index.html
+++ b/index.html
@@ -72,28 +72,56 @@
 
     <main class="main-container border-yellow">
 
+        <!-- NAV LATERALE -->
+        <!-- 
+_______________
+_______________
+_______________
+_______________ -->
+
         <aside class="aside-nav border-red">
 
         </aside>
 
+        <!-- SEZIONE MUSICA -->
+        <!-- 
+_______________
+_______________
+_______________
+_______________ -->
+
         <section class="main-section border-green">
 
-            <nav class="upgrade border-gray">
-                <button><a href="#">EFFETTUA L'UPGRADE</a></button>
-            </nav>
+            <div class="upgrade-container border-gray">
+                <nav class="upgrade">
+                    <button class="main-btn"><a href="#">EFFETTUA L'UPGRADE</a></button>
+                </nav>
 
+            </div>
+            <div class="filters border-violet">
+                <ul>
+                    <li>IN EVIDENZA</li>
+                    <li>PODCAST</li>
+                    <li>CLASSIFICHE</li>
+                    <li>GENERI E MOOD</li>
+                    <li>NUOVE USCITE</li>
+                    <li>SCOPRI</li>
+                </ul>
+            </div>
             <div class="main-col border-blue-2">
-                <div class="filters border-violet">
-                    <ul>
-                        <li>IN EVIDENZA</li>
-                        <li>PODCAST</li>
-                        <li>CLASSIFICHE</li>
-                        <li>GENERI E MOOD</li>
-                        <li>NUOVE USCITE</li>
-                        <li>SCOPRI</li>
-                    </ul>
-                </div>
+                <!-- FILTRI -->
+                <!-- 
+_______________
+_______________
+_______________
+_______________ -->
 
+                <!-- ROW SONGS -->
+                <!-- 
+_______________
+_______________
+_______________
+_______________ -->
                 <div class="row row-1 border-black">
                     <h2 class="color-white">Recently played</h2>
                     <div class="col">
@@ -129,13 +157,90 @@
                         </div>
                     </div>
                 </div>
+                <div class="row row-1 border-black">
+                    <h2 class="color-white">Recently played</h2>
+                    <div class="col">
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-1 border-black">
+                    <h2 class="color-white">Recently played</h2>
+                    <div class="col">
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3 class="color-white">Heavy Metal</h3>
+                            <h4 class="color-gray">Subtitle</h4>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             </div>
 
         </section>
 
     </main>
 
-
+    <!-- BUTTON PLAYER -->
+    <!-- 
+_______________
+_______________
+_______________
+_______________ -->
     <footer class="player-section border-pink">
 
         <div class="player">1</div>
