aside nav bar approccio

--- a/index.html
+++ b/index.html
@@ -80,7 +80,31 @@ _______________
 _______________ -->
 
         <aside class="aside-nav border-red">
-
+            <div class="ul-aside ul-aside-1">
+                <ul>
+                    <li class="li-home color-white">Home</li>
+                    <li>Cerca</li>
+                    <li>La tua libreria</li>
+                </ul>
+            </div>
+            <div class="ul-aside ul-aside-2">
+                <ul>
+                    <li>PLAYLIST</li>
+                    <li>Crea Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                </ul>
+            </div>
+            <div class="ul-aside ul-aside-3">
+                <span class="color-gray">Installa app</span>
+                <hr>
+                <span class="color-white">John Doe</span>
+            </div>
         </aside>
 
         <!-- SEZIONE MUSICA -->
