logo + resize imgs

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ _______________
 _______________ -->
 
         <aside class="aside-nav border-red">
+            <div class="logo">
+                <img src="./img/logo.svg" alt="">
+            </div>
             <div class="ul-aside ul-aside-1">
                 <ul>
                     <li class="li-home color-white">Home</li>
