footer + correzioni aside bar

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <main class="main-container border-yellow">
 
-        <!-- NAV LATERALE -->
+        <!-- ASIDE NAV LATERALE -->
         <!-- 
 _______________
 _______________
@@ -85,15 +85,30 @@ _______________ -->
             </div>
             <div class="ul-aside ul-aside-1">
                 <ul>
-                    <li class="li-home color-white">Home</li>
-                    <li>Cerca</li>
-                    <li>La tua libreria</li>
+                    <li class="li-home color-white"><span>Home</span></li>
+                    <li><span>Cerca</span></li>
+                    <li><span>La tua libreria</span></li>
                 </ul>
             </div>
+            <span class="color-white">Playlist</span>
+            <span class="color-white">Crea Playlist</span>
             <div class="ul-aside ul-aside-2">
-                <ul>
-                    <li>PLAYLIST</li>
-                    <li>Crea Playlist</li>
+
+                <ul class="playlist-ul">
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
                     <li>Nome Playlist</li>
                     <li>Nome Playlist</li>
                     <li>Nome Playlist</li>
@@ -125,6 +140,12 @@ _______________ -->
                 </nav>
 
             </div>
+            <!-- FILTRI -->
+            <!-- 
+_______________
+_______________
+_______________
+_______________ -->
             <div class="filters border-violet">
                 <ul>
                     <li>IN EVIDENZA</li>
@@ -136,12 +157,7 @@ _______________ -->
                 </ul>
             </div>
             <div class="main-col border-blue-2">
-                <!-- FILTRI -->
-                <!-- 
-_______________
-_______________
-_______________
-_______________ -->
+
 
                 <!-- ROW SONGS -->
                 <!-- 
@@ -158,100 +174,63 @@ _______________ -->
                             <h4 class="color-gray">Subtitle</h4>
                         </div>
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
+                            <img src="./img/stranger.jpeg" alt="">
+                            <h3 class="color-white">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                            <h4 class="color-gray">Kyle Dixon & Michael Stein</h4>
+                        </div>
+                        <div class="card">
+                            <img src="./img/aquietplace.jpeg" alt="">
+                            <h3 class="color-white">A quiet place</h3>
                             <h4 class="color-gray">Subtitle</h4>
                         </div>
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
+                            <img src="./img/split.jpeg" alt="">
+                            <h3 class="color-white">Split</h3>
                             <h4 class="color-gray">Subtitle</h4>
                         </div>
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
+                            <img src="./img/cure.jpeg" alt="">
+                            <h3 class="color-white">A cure for wellness</h3>
                             <h4 class="color-gray">Subtitle</h4>
                         </div>
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
+                            <img src="./img/sinister.jpeg" alt="">
+                            <h3 class="color-white">Sinister</h3>
                             <h4 class="color-gray">Subtitle</h4>
                         </div>
                     </div>
                 </div>
                 <div class="row row-1 border-black">
-                    <h2 class="color-white">Recently played</h2>
+                    <h2 class="color-white">Creato per John Doe</h2>
                     <div class="col">
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
+                            <img src="./img/radar.jpeg" alt="">
+                            <h3 class="color-white">Release Radar</h3>
+
                         </div>
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
+                            <img src="./img/mixdaily.jpeg" alt="">
+                            <h3 class="color-white">Daily Mix 1</h3>
+
                         </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
+
                     </div>
                 </div>
                 <div class="row row-1 border-black">
-                    <h2 class="color-white">Recently played</h2>
+                    <h2 class="color-white">Artisti più popolari</h2>
+                    <h4 class="sub-col-3 color-gray">Più ascolti, più accurati saranno i suggerimenti.</h4>
                     <div class="col">
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
+                            <img class="rounded-img" src="./img/youg.jpeg" alt="">
+                            <h3 class="color-white">Lana del Rey</h3>
+
                         </div>
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
+                            <img class="rounded-img" src="./img/einaudi.jpeg" alt="">
+                            <h3 class="color-white">Ludovico Einaudi</h3>
+
                         </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
-                        <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
-                            <h3 class="color-white">Heavy Metal</h3>
-                            <h4 class="color-gray">Subtitle</h4>
-                        </div>
+
                     </div>
                 </div>
 
@@ -269,10 +248,54 @@ _______________
 _______________
 _______________ -->
     <footer class="player-section border-pink">
+        <!-- LEFT -->
+        <div class="player-left">
+            <div>
+                <img src="./img/sinister.jpeg" alt="">
+            </div>
+            <div>
+                <h5 class="color-white">Sinister</h5>
+                <h6 class="color-gray">Brano Nome</h6>
+            </div>
+            <div>
+                <i class="fa-regular fa-heart color-gray"></i>
+            </div>
+            <div>
+                <i class="fa-regular fa-folder color-gray"></i>
+            </div>
+            <!-- CENTER -->
+        </div>
+        <div class="player-center">
+            <div class="footer-mid-top">
+                <i class="fa-solid fa-shuffle color-white"></i>
+                <i class="fa-solid fa-backward-step color-white"></i>
+                <i class="fa-solid fa-circle-play color-white"></i>
+                <i class="fa-solid fa-forward-step color-white"></i>
+                <i class="fa-solid fa-arrow-rotate-right color-white"></i>
+                <!-- PAUSE <i class="fa-solid fa-circle-pause"></i> -->
+            </div>
+            <div class="footer-mid-bottom">
+                <div class="minutes color-white">0.25</div>
+                <div>
+                    <div class="line color-gray">
+                        <div class="line-s color-white"></div>
+                    </div>
+                </div>
+                <div class="minutes color-white">4.35</div>
+            </div>
+        </div>
+        <!-- RIGHT -->
+        <div class="player-right">
+            <div><i class="fa-solid fa-list-ul color-white"></i>
 
-        <div class="player">1</div>
-        <div class="player">2</div>
-        <div class="player">3</div>
+            </div>
+            <div><i class="fa-solid fa-display color-white"></i></div>
+            <div><i class="fa-solid fa-volume-low color-white"></i></div>
+            <div class="small-line-gray">
+                <div class="small-line-white">
+                </div>
+            </div>
+        </div>
 
     </footer>
 
