termine aside e footer player

--- a/index.html
+++ b/index.html
@@ -81,20 +81,21 @@ _______________ -->
 
         <aside class="aside-nav border-red">
             <div class="logo">
-                <img src="./img/logo.svg" alt="">
+                <img class="padding-orizzontal" src="./img/logo.svg" alt="">
             </div>
             <div class="ul-aside ul-aside-1">
                 <ul>
-                    <li class="li-home color-white"><span>Home</span></li>
-                    <li><span>Cerca</span></li>
-                    <li><span>La tua libreria</span></li>
+                    <li class="li-home color-white"><span><i
+                                class="fa-solid fa-house padding-orizzontal"></i>Home</span></li>
+                    <li><span><i class="fa-solid fa-magnifying-glass padding-orizzontal"></i>Cerca</span></li>
+                    <li><span><i class="fa-solid fa-lines-leaning padding-orizzontal"></i>La tua libreria</span></li>
                 </ul>
             </div>
-            <span class="color-white">Playlist</span>
-            <span class="color-white">Crea Playlist</span>
+            <span class="color-white padding-tot ">PLAYLIST</span>
+            <span class="color-white padding-1"><i class="fa-solid fa-plus"></i>Crea Playlist</span>
             <div class="ul-aside ul-aside-2">
 
-                <ul class="playlist-ul">
+                <ul class="playlist-ul padding-orizzontal">
                     <li>Nome Playlist</li>
                     <li>Nome Playlist</li>
                     <li>Nome Playlist</li>
@@ -119,9 +120,10 @@ _______________ -->
                 </ul>
             </div>
             <div class="ul-aside ul-aside-3">
-                <span class="color-gray">Installa app</span>
-                <hr>
-                <span class="color-white">John Doe</span>
+                <span class="color-gray padding-orizzontal install-app"><i class="fa-solid fa-arrow-down"></i>installa
+                    app</span>
+                <hr class="color-gray">
+                <span class="color-white padding-orizzontal"><i class="fa-solid fa-user"></i>John Doe</span>
             </div>
         </aside>
 
@@ -148,7 +150,7 @@ _______________
 _______________ -->
             <div class="filters border-violet">
                 <ul>
-                    <li>IN EVIDENZA</li>
+                    <li class="underline-green">IN EVIDENZA</li>
                     <li>PODCAST</li>
                     <li>CLASSIFICHE</li>
                     <li>GENERI E MOOD</li>
@@ -206,14 +208,11 @@ _______________ -->
                         <div class="card">
                             <img src="./img/radar.jpeg" alt="">
                             <h3 class="color-white">Release Radar</h3>
-
                         </div>
                         <div class="card">
                             <img src="./img/mixdaily.jpeg" alt="">
                             <h3 class="color-white">Daily Mix 1</h3>
-
                         </div>
-
                     </div>
                 </div>
                 <div class="row row-1 border-black">
@@ -223,25 +222,20 @@ _______________ -->
                         <div class="card">
                             <img class="rounded-img" src="./img/youg.jpeg" alt="">
                             <h3 class="color-white">Lana del Rey</h3>
-
                         </div>
                         <div class="card">
                             <img class="rounded-img" src="./img/einaudi.jpeg" alt="">
                             <h3 class="color-white">Ludovico Einaudi</h3>
-
                         </div>
-
                     </div>
                 </div>
-
             </div>
             </div>
-
         </section>
 
     </main>
 
-    <!-- BUTTON PLAYER -->
+    <!-- BUTTON PLAYER FOOTER -->
     <!-- 
 _______________
 _______________
