aggiusto colori e sviste random

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ _______________ -->
                 </ul>
             </div>
             <span class="color-white padding-tot ">PLAYLIST</span>
-            <span class="color-white padding-1"><i class="fa-solid fa-plus"></i>Crea Playlist</span>
+            <span class="color-white padding-1 color-gray"><i class="fa-solid fa-plus"></i>Crea Playlist</span>
             <div class="ul-aside ul-aside-2">
 
                 <ul class="playlist-ul padding-orizzontal">
