aside bar responsive mobile

--- a/index.html
+++ b/index.html
@@ -81,18 +81,22 @@ _______________ -->
 
         <aside class="aside-nav border-red">
             <div class="logo">
-                <img class="padding-orizzontal" src="./img/logo.svg" alt="">
+                <img class="logo-big padding-orizzontal" src="./img/logo.svg" alt="">
+                <img class="logo-small padding-orizzontal" src="./img/logo-small.svg" alt="">
             </div>
             <div class="ul-aside ul-aside-1">
                 <ul>
-                    <li class="li-home color-white"><span><i
-                                class="fa-solid fa-house padding-orizzontal"></i>Home</span></li>
-                    <li><span><i class="fa-solid fa-magnifying-glass padding-orizzontal"></i>Cerca</span></li>
-                    <li><span><i class="fa-solid fa-lines-leaning padding-orizzontal"></i>La tua libreria</span></li>
+                    <li class="li-home color-white"><span><i class="fa-solid fa-house padding-orizzontal"></i><span
+                                class="titles-nav">Home</span></span></li>
+                    <li><span><i class="fa-solid fa-magnifying-glass padding-orizzontal"></i><span
+                                class="titles-nav">Cerca</span></span></li>
+                    <li><span><i class="fa-solid fa-lines-leaning padding-orizzontal"></i><span class="titles-nav">La
+                                tua libreria</span></span></li>
                 </ul>
             </div>
-            <span class="color-white padding-tot ">PLAYLIST</span>
-            <span class="color-white padding-1 color-gray"><i class="fa-solid fa-plus"></i>Crea Playlist</span>
+            <span class="color-white padding-tot"><span class="titles-nav">PLAYLIST</span></span>
+            <span class="color-white padding-1 color-gray"><i class="fa-solid fa-plus"></i><span class="titles-nav">Crea
+                    Playlist</span></span>
             <div class="ul-aside ul-aside-2">
 
                 <ul class="playlist-ul padding-orizzontal">
@@ -120,10 +124,12 @@ _______________ -->
                 </ul>
             </div>
             <div class="ul-aside ul-aside-3">
-                <span class="color-gray padding-orizzontal install-app"><i class="fa-solid fa-arrow-down"></i>installa
-                    app</span>
+                <span class="color-gray padding-orizzontal install-app"><i class="fa-solid fa-arrow-down"></i><span
+                        class="titles-nav">installa
+                        app</span></span>
                 <hr class="color-gray">
-                <span class="color-white padding-orizzontal"><i class="fa-solid fa-user"></i>John Doe</span>
+                <span class="color-white padding-orizzontal"><i class="fa-solid fa-user"></i><span
+                        class="titles-nav">John Doe</span></span>
             </div>
         </aside>
 
