hover img album prova 1

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@ _______________ -->
                     <h2 class="color-white">Recently played</h2>
                     <div class="col">
                         <div class="card">
-                            <img src="./img/metal_lifting.jpg" alt="">
+                            <img class="hover-img" src="./img/metal_lifting.jpg" alt="">
+                            <i class="hover-btn fa-solid fa-circle-play"></i>
                             <h3 class="color-white">Heavy Metal</h3>
                             <h4 class="color-gray">Subtitle</h4>
                         </div>
