fallimento totale su hover

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ _______________ -->
                     <div class="col">
                         <div class="card">
                             <img class="hover-img" src="./img/metal_lifting.jpg" alt="">
-                            <i class="hover-btn fa-solid fa-circle-play"></i>
+                            <i class="hover-btn fa-solid fa-circle-play color-white"></i>
                             <h3 class="color-white">Heavy Metal</h3>
                             <h4 class="color-gray">Subtitle</h4>
                         </div>
@@ -270,7 +270,7 @@ _______________ -->
             <div class="footer-mid-top">
                 <i class="fa-solid fa-shuffle color-white"></i>
                 <i class="fa-solid fa-backward-step color-white"></i>
-                <i class="fa-solid fa-circle-play color-white"></i>
+                <i class="play-btn fa-solid fa-circle-play color-white"></i>
                 <i class="fa-solid fa-forward-step color-white"></i>
                 <i class="fa-solid fa-arrow-rotate-right color-white"></i>
                 <!-- PAUSE <i class="fa-solid fa-circle-pause"></i> -->
